# ecofinca-buganvilla-analytics

./: .gitignore  README.md  app.py  main.py  pyproject.toml
rural_analytics/: charts.py  constants.py  db.py  normalization.py  parser.py  validators.py
