[project]
name = "rural-analytics"
version = "0.1.0"
description = "Dashboard de reservas para casa rural"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "streamlit>=1.58.0",
]

[project.scripts]
rural-analytics = "app:main"
